--- a/index.html
+++ b/index.html
@@ -62,7 +62,14 @@
             userInput.value = '';
 
             try {
+                /*
                 const response = await fetch('http://127.0.0.1:5000/chat', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ message }),
+                });
+                */
+                const response = await fetch('https://chatbot-2-ltc4.onrender.com/chat', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ message }),
